crates/squealy/tests/compile_fail/window_rejected_in_returning.stderr
error[E0277]: the trait bound `Expr<'_, i64, squealy::WindowExprAst<squealy::WindowNoArg, squealy::WindowNil, squealy::WindowOrder<squealy::ColumnExprAst<PostId>, squealy::WindowNil>>>: squealy::ReturnableProjection` is not satisfied
  --> tests/compile_fail/window_rejected_in_returning.rs:17:10
   |
17 |         .insert_returning(|post| row_number().over(|w| w.order_by(post.id.asc())));
   |          ^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `squealy::ReturnableProjection` is not implemented for `Expr<'_, i64, squealy::WindowExprAst<squealy::WindowNoArg, squealy::WindowNil, squealy::WindowOrder<squealy::ColumnExprAst<PostId>, squealy::WindowNil>>>`
help: the trait `squealy::ReturnableProjection` is implemented for `Expr<'_, K, Ast>`
  --> $WORKSPACE/crates/squealy-core/src/expr.rs
   |
   | impl<'scope, K, Ast> ReturnableProjection for Expr<'scope, K, Ast> where Ast: ExprAst + NonWindowAst {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `__SquealyPostWriteBuilder::<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyPostUserIdWriteInsertState, __SquealyPostUserIdWriteUpdateState>::insert_returning`
  --> tests/compile_fail/window_rejected_in_returning.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^ required by this bound in `__SquealyPostWriteBuilder::<'conn, Conn, InsertColumns, UpdateColumns, Filters, FilterState, __SquealyPostUserIdWriteInsertState, __SquealyPostUserIdWriteUpdateState>::insert_returning`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
